--- a/client/src/css/scss/defaults.scss
+++ b/client/src/css/scss/defaults.scss
@@ -1,9 +1,9 @@
 $bg: #ffffff;
-$bg_card: #FAFBF6;
 
 $color_main: #FE5670;
 $color_h1: #2B947D;
 
+$color_text: #757575;
 $color_menu_text: #F8715F;
 $color_nav_text: #ffffff;
 $color_border_header: #ececec;
