--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -70,7 +70,11 @@ input[type="submit"] {
     margin: 0 auto;
     width: 100%; }
     .header .header__search .btn--search {
-      position: absolute; }
+      position: absolute;
+      right: .5em; }
+  .header__input {
+    margin-left: 3em;
+    width: 75%; }
   .header section {
     padding: .6em; }
   .header__alerts, .header__config, .header__messages {
@@ -87,7 +91,15 @@ input[type="submit"] {
     display: inline-block !important; }
   .header__search {
     color: #a0a0a0;
-    flex: 1; } }
+    flex: 1; }
+    .header__search .btn--search {
+      right: .5em;
+      left: 13em;
+      width: 41px;
+      display: inline-block; }
+  .header:active {
+    box-shadow: 0 0 0 2000px rgba(0, 0, 0, 0.075);
+    z-index: 1; } }
 
 .card {
   width: 100%;
@@ -97,9 +109,12 @@ input[type="submit"] {
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  position: absolute; }
-  .card > .card__title {
-    color: #F8715F; }
+  position: absolute;
+  color: #757575;
+  line-height: 1.5em; }
+  .card__title {
+    color: #F8715F;
+    padding: 0 0 1em 0; }
   .card > .card__1,
   .card > .card__2,
   .card > .card__3,
@@ -110,12 +125,12 @@ input[type="submit"] {
   .card > .card__8,
   .card > .card__9,
   .card > .card__10 {
-    background-color: #FAFBF6;
+    background-color: #ffffff;
     border-radius: .8em;
-    box-shadow: 0 0px 9px 0 silver;
+    box-shadow: 0 0px 9px 0 #d4d4d4;
     width: 90%;
-    margin: 1em;
-    padding: 2em;
+    margin: .5em 0;
+    padding: .5em;
     position: relative; }
 
 @media (min-width: 792px) {
@@ -124,8 +139,20 @@ input[type="submit"] {
     right: 2em;
     width: auto;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start; }
+    .card > .card__1,
+    .card > .card__2,
+    .card > .card__3,
+    .card > .card__4,
+    .card > .card__5,
+    .card > .card__6,
+    .card > .card__7,
+    .card > .card__8,
+    .card > .card__9,
+    .card > .card__10 {
+      margin: 1em;
+      padding: 2em; }
     .card > .card__1 {
       width: 10%; }
     .card > .card__2 {
@@ -181,7 +208,7 @@ nav.navbar {
   margin: 0 auto;
   border-radius: 50%;
   position: relative;
-  box-shadow: 0 1px 7px -2px black; }
+  box-shadow: 0 1px 4px -2px black; }
   .avatar-user span {
     margin: 0 auto;
     font-size: 3.4em;
@@ -210,13 +237,12 @@ nav.navbar {
     position: relative; }
   .arrow::before {
     position: absolute;
-    top: 0;
-    left: 5.3em;
+    top: 0.5em;
+    left: 5.27em;
     content: '';
-    border-top: .5em solid #fff;
-    border-right: .5em solid #fff;
-    border-left: .5em solid transparent;
-    border-bottom: .5em solid transparent;
+    border-right: 0.6em solid #fff;
+    border-left: 0.6em solid transparent;
+    border-bottom: 0.6em solid transparent;
     transform: rotate(225deg); } }
 
 .active {
