--- a/client/src/css/scss/style.scss
+++ b/client/src/css/scss/style.scss
@@ -3,5 +3,5 @@
 @import './elements.scss';
 @import './header.scss';
 @import './card.scss';
-@import './nav.scss';
+@import './sidebar.scss';
 @import './modifiers.scss';
