--- a/client/src/css/scss/card.scss
+++ b/client/src/css/scss/card.scss
@@ -56,33 +56,43 @@
         }
         &>&__1{
             width: 10%;
+            min-width: 190px;
         }
         &>&__2{
             width: 20%;
+            min-width: 315px;
         }
         &>&__3{
             width: 30%;
+            min-width: 441px;
         }
         &>&__4{
             width: 40%;
+            min-width: 540px;
         }
         &>&__5{
             width: 50%;
+            min-width: 630px;
         }
         &>&__6{
             width: 60%;
+            min-width: 755px;
         }
         &>&__7{
             width: 70%;
+            min-width: 880px;
         }
         &>&__8{
             width: 80%;
+            min-width: 1020px;
         }
         &>&__9{
             width: 90%;
+            min-width: 1148px;            
         }
         &>&__10{
             width: 100%;
+            min-width: 1180px;
         } 
     }
 }
