--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -154,27 +154,37 @@ input[type="submit"] {
       margin: 1em;
       padding: 2em; }
     .card > .card__1 {
-      width: 10%; }
+      width: 10%;
+      min-width: 190px; }
     .card > .card__2 {
-      width: 20%; }
+      width: 20%;
+      min-width: 315px; }
     .card > .card__3 {
-      width: 30%; }
+      width: 30%;
+      min-width: 441px; }
     .card > .card__4 {
-      width: 40%; }
+      width: 40%;
+      min-width: 540px; }
     .card > .card__5 {
-      width: 50%; }
+      width: 50%;
+      min-width: 630px; }
     .card > .card__6 {
-      width: 60%; }
+      width: 60%;
+      min-width: 755px; }
     .card > .card__7 {
-      width: 70%; }
+      width: 70%;
+      min-width: 880px; }
     .card > .card__8 {
-      width: 80%; }
+      width: 80%;
+      min-width: 1020px; }
     .card > .card__9 {
-      width: 90%; }
+      width: 90%;
+      min-width: 1148px; }
     .card > .card__10 {
-      width: 100%; } }
+      width: 100%;
+      min-width: 1180px; } }
 
-nav.navbar {
+.sidebar {
   z-index: 1;
   color: #ffffff;
   top: 0;
@@ -186,18 +196,18 @@ nav.navbar {
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
   transition: left .4s ease-in; }
-  nav.navbar ul li {
+  .sidebar ul li {
     list-style: none;
     padding: 1em;
     margin: 0 auto;
     border-bottom: 1px solid #ee8b7b; }
-    nav.navbar ul li .ico-menu {
+    .sidebar ul li .ico-menu {
       font-size: 2em;
       margin: .2em;
       display: inline-block;
       width: 35px;
       text-align: center; }
-    nav.navbar ul li:first-child {
+    .sidebar ul li:first-child {
       text-align: center;
       position: relative; }
 
@@ -226,11 +236,11 @@ nav.navbar {
     color: #3b3535; }
 
 @media (min-width: 792px) {
-  nav.navbar {
+  .sidebar {
     max-width: 203px;
     left: 0;
     width: 100%; }
-    nav.navbar ul li:hover {
+    .sidebar ul li:hover {
       background-color: #FD576F;
       cursor: pointer; }
   .arrow {
